[tool.poetry]
name = "composy"
version = "0.1.0"
description = "A simple pseudocode language for composing music quickly, written in python"
authors = ["James Baxter <james@jsbaxter.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
